padding added to navbar written in HTML

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Home v5 | Repute - Responsive Multipurpose Bootstrap Theme</title>
+	<title>Observer Mobility Homepage</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Observer Mobility">
@@ -59,7 +59,7 @@
 							<a href="#pricing">PRICING</a>
 						</li>
 						<li>
-							<a href="#contact">CONTACT US</a>
+							<a href="contactUs.html">CONTACT US</a>
 						</li>
 					</ul>
 				</div>
@@ -73,16 +73,16 @@
 				<div>
 					<div class="overlay"></div>
 					<div class="container slide-content">
-						<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
-						<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
+						<h2 class="hero-heading">Go anywhere, anytime</h2>
+						<p class="lead">The Observer is the first wheel-chair specially created for driving anywhere you want, anytime you want, without limitations</p>
 						<a href="#" class="btn btn-rounded-4x btn-primary btn-hero">LEARN MORE</a>
 					</div>
 					<img src="assets/img/sliders/full-slide.jpg" alt="Slide Image">
 				</div>
 				<div>
 					<div class="container slide-content text-right">
-						<h2 class="hero-heading">CLEAN &amp; ELEGANT DESIGN</h2>
-						<p class="lead">Giving valuable reputation and credibility to your business</p>
+						<h2 class="hero-heading">The real adventure begins where the paved road ends</h2>
+						<p class="lead">Let us introduce you to a unique 4x4  all terrain wheel-chair.</p>
 						<a href="#" class="btn btn-rounded-4x btn-primary btn-hero">LEARN MORE</a>
 					</div>
 					<img src="assets/img/sliders/full-slide2.jpg" alt="Slide Image">
@@ -90,7 +90,7 @@
 				<div>
 					<div class="container slide-content text-center">
 						<h2 class="hero-heading">EASY TO CUSTOMIZE</h2>
-						<p class="lead">Readable code, well documented and FREE support</p>
+						<p class="lead">Check out some of our custom accessories</p>
 						<a href="#" class="btn btn-rounded-4x btn-primary btn-hero">LEARN MORE</a>
 					</div>
 					<img src="assets/img/sliders/full-slide3.jpg" alt="Slide Image">
