social media icons changed and added wechat

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<div>
 					<div class="container slide-content text-right">
 						<h2 class="hero-heading">The real adventure begins where the paved road ends</h2>
-						<p class="lead">Let us introduce you to a unique 4x4  all terrain wheel-chair.</p>
+						<p class="lead">Let us introduce you to our unique 4x4  all terrain wheel-chair</p>
 						<a href="#" class="btn btn-rounded-4x btn-primary btn-hero">LEARN MORE</a>
 					</div>
 					<img src="assets/img/sliders/full-slide2.jpg" alt="Slide Image">
@@ -257,7 +257,7 @@
 					<h2 class="section-heading">GET IN TOUCH</h2>
 				</div>
 				<div class="pull-right">
-					<span>Call us at (1800) 765 - 4321 or</span>&nbsp;&nbsp;<a href="#" class="btn btn-lg btn-primary">CONTACT US</a>
+					<span>Call us at (1800) 777 - 7777 or</span>&nbsp;&nbsp;<a href="#" class="btn btn-lg btn-primary">CONTACT US</a>
 				</div>
 			</div>
 		</section>
@@ -269,15 +269,15 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/repute-logo-light.png" class="logo" alt="Repute">
-						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
+						<img src="assets/img/logo/Observer225x65.png" class="logo" alt="Observer Mobility logo">
+<!-- 						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p> -->
 						<br>
 						<address class="margin-bottom-30px">
 							<ul class="list-unstyled">
-								<li>1234 North Main Street
-									<br/> New York, NY 222222</li>
-								<li>Phone: (1800) 765 - 4321</li>
-								<li>Email: email@yourdomain.com</li>
+<!-- 								<li>1234 North Main Street
+									<br/> New York, NY 222222</li> -->
+								<li>Phone: (1800) 777 - 7777</li>
+								<li>Email: contact@observermobility.com</li>
 							</ul>
 						</address>
 						<!-- END COLUMN 1 -->
@@ -311,7 +311,7 @@
 						<!-- COLUMN 3 -->
 						<div class="newsletter">
 							<h3 class="footer-heading">NEWSLETTER</h3>
-							<p>Get the latest update from us by subscribing to our newsletter.</p>
+							<p>Get the latest Observer Mobility update by subscribing to our newsletter.</p>
 							<form class="newsletter-form" method="POST">
 								<div class="input-group input-group-lg">
 									<input type="email" class="form-control" name="email" placeholder="youremail@domain.com">
@@ -324,10 +324,10 @@
 						<div class="social-connect">
 							<h3 class="footer-heading">GET CONNECTED</h3>
 							<ul class="list-inline social-icons">
+								<li><a href="#" class="linkedin-bg"><i class="fa fa-linkedin"></i></a></li>
 								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="#" class="wechat-bg"><i class="fa fa-wechat"></i></a></li>
 								<li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" class="googleplus-bg"><i class="fa fa-google-plus"></i></a></li>
-								<li><a href="#" class="rss-bg"><i class="fa fa-rss"></i></a></li>
 							</ul>
 						</div>
 						<!-- END COLUMN 3 -->
@@ -336,7 +336,7 @@
 			</div>
 			<!-- COPYRIGHT -->
 			<div class="text-center copyright">
-				&copy;2016 The Develovers. All Rights Reserved.
+				&copy;2016 www.EveryDayKenneth.com All Rights Reservered.
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
