products navmenu added for homepage

--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
 						<li>
 							<a href="#services">SERVICES</a>
 						</li>
-						<li>
-							<a href="#portfolio">PORTFOLIO</a>
+						<li class="dropdown ">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">PRODUCTS  <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-down"></i></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="feature-navigation-menu.html">4X4 Electric Wheelchairs</a></li>
+								<li class="dropdown ">
+									<a href="#">Accessories <span class="label label-danger label-main-nav">NEW</span></a>
+								</li>
+							</ul>
 						</li>
 						<li>
 							<a href="#pricing">PRICING</a>
@@ -269,7 +275,7 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/Observer225x65.png" class="logo" alt="Observer Mobility logo">
+						<img src="assets/img/logo/observer225x65.png" class="logo" alt="Observer Mobility logo">
 <!-- 						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p> -->
 						<br>
 						<address class="margin-bottom-30px">
