--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 						<li class="dropdown ">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">PRODUCTS  <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-down"></i></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="feature-navigation-menu.html">4X4 Electric Wheelchairs</a></li>
+								<li><a href="4x4ElectricWheelchairs.html">4X4 Electric Wheelchairs</a></li>
 								<li class="dropdown ">
-									<a href="#">Accessories <span class="label label-danger label-main-nav">NEW</span></a>
+									<a href="accessories.html">Accessories <span class="label label-danger label-main-nav">NEW</span></a>
 								</li>
 							</ul>
 						</li>
