bottom logo adjusted for homepage

--- a/OB-EW-001.html
+++ b/OB-EW-001.html
@@ -113,7 +113,7 @@
 		<!-- BREADCRUMBS -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">PRODUCTS</h1>
+				<h1 class="page-title pull-left">OB-EW-001</h1>
 				<ol class="breadcrumb">
 					<li><a href="#">Products</a></li>
 					<li><a href="#">4x4 Electric Wheelchairs</a></li>
