--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/observer225x65.png" class="logo" alt="Observer Mobility logo">
+						<img src="assets/img/logo/observer225x150.png" class="logo" alt="Observer Mobility logo">
 <!-- 						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p> -->
 						<br>
 						<address class="margin-bottom-30px">
@@ -333,7 +333,7 @@
 								<li><a href="#" class="linkedin-bg"><i class="fa fa-linkedin"></i></a></li>
 								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#" class="wechat-bg"><i class="fa fa-wechat"></i></a></li>
-								<li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
+								<li><a href="#" class="renren-bg"><i class="fa fa-renren"></i></a></li>
 							</ul>
 						</div>
 						<!-- END COLUMN 3 -->
