copyright logo changed on bottom of homepage

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 					</div>
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned left-boxed-icon">
-							<i class="fa fa-users"></i>
+							<i class="fa fa-wheelchair"></i>
 							<h2 class="boxed-content-title">PROFESSIONAL SUPPORT</h2>
 							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
 						</div>
@@ -165,7 +165,7 @@
 		<!-- CAROUSEL -->
 		<section class="recent-works slick-carousel">
 			<div class="container">
-				<h2 class="section-heading">RECENT WORKS</h2>
+				<h2 class="section-heading">FEATURED PRODUCTS</h2>
 				<div class="portfolio-container">
 					<div class="portfolio-item">
 						<div class="overlay"></div>
@@ -328,7 +328,7 @@
 							</form>
 						</div>
 						<div class="social-connect">
-							<h3 class="footer-heading">GET CONNECTED</h3>
+							<h3 class="footer-heading">LET'S CONNECT</h3>
 							<ul class="list-inline social-icons">
 								<li><a href="#" class="linkedin-bg"><i class="fa fa-linkedin"></i></a></li>
 								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
@@ -342,7 +342,7 @@
 			</div>
 			<!-- COPYRIGHT -->
 			<div class="text-center copyright">
-				&copy;2016 www.EveryDayKenneth.com All Rights Reservered.
+				&copy;2016 www.observermobility.com All Rights Reservered.
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
