mobile navbar menu adjusted

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 				</div>
 				<!-- MAIN NAVIGATION -->
 				<div id="main-nav" class="navbar-collapse collapse">
-					<ul class="nav navbar-nav navbar-right">
+					<ul class="nav navbar-nav navbar-right" style="margin-top: 40px;">
 						<li>
-							<a href="aboutus.html">ABOUT</a>
+							<a href="aboutus.html">ABOUT THE COMPANY</a>
 						</li>
 						<li>
 							<a href="#services">SERVICES</a>
@@ -132,21 +132,21 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned left-boxed-icon">
-							<i class="fa fa-flag"></i>
+							<i class="fa fa-wheelchair"></i>
 							<h2 class="boxed-content-title">GOAL ORIENTED</h2>
 							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned left-boxed-icon">
-							<i class="fa fa-globe"></i>
+							<i class="fa fa-wheelchair"></i>
 							<h2 class="boxed-content-title">GLOBAL SERVICE</h2>
 							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned left-boxed-icon">
-							<i class="fa fa-cog"></i>
+							<i class="fa fa-wheelchair"></i>
 							<h2 class="boxed-content-title">DYNAMIC CHANGE</h2>
 							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
 						</div>
@@ -170,8 +170,8 @@
 					<div class="portfolio-item">
 						<div class="overlay"></div>
 						<div class="info">
-							<h4 class="title">Raining</h4>
-							<p class="brief-description">Photography</p>
+							<h4 class="title">OB-EW-001</h4>
+							<p class="brief-description">The Best One</p>
 							<a href="#" class="btn">read more</a>
 						</div>
 						<div class="media-wrapper">
@@ -181,8 +181,8 @@
 					<div class="portfolio-item">
 						<div class="overlay"></div>
 						<div class="info">
-							<h4 class="title">Perfect Edge</h4>
-							<p class="brief-description">Product Design</p>
+							<h4 class="title">OB-EW-002</h4>
+							<p class="brief-description">The Second One</p>
 							<a href="#" class="btn">read more</a>
 						</div>
 						<div class="media-wrapper">
@@ -192,8 +192,8 @@
 					<div class="portfolio-item">
 						<div class="overlay"></div>
 						<div class="info">
-							<h4 class="title">Sunny Day</h4>
-							<p class="brief-description">Story</p>
+							<h4 class="title">OB-EW-003</h4>
+							<p class="brief-description">The Third One</p>
 							<a href="#" class="btn">read more</a>
 						</div>
 						<div class="media-wrapper">
@@ -274,7 +274,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
-						<h3 class="sr-only">ABOUT US</h3>
+						<h3 class="sr-only">ABOUT THE COMPANY</h3>
 						<img src="assets/img/logo/observer225x150.png" class="logo" alt="Observer Mobility logo">
 <!-- 						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p> -->
 						<br>
@@ -294,7 +294,7 @@
 						<div class="row margin-bottom-30px">
 							<div class="col-xs-6">
 								<ul class="list-unstyled footer-nav">
-									<li><a href="#">About Us</a></li>
+									<li><a href="#">About The Company</a></li>
 									<li><a href="#">News</a></li>
 									<li><a href="#">Community</a></li>
 									<li><a href="#">Career</a></li>
