--- a/4x4ElectricWheelchairs.html
+++ b/4x4ElectricWheelchairs.html
@@ -71,7 +71,7 @@
 					</div>
 				</div>
 				<!-- END TOPBAR -->
-				<div class="navbar-header">
+				<div class="navbar-header" style="padding-bottom: 50px;">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav">
 						<span class="sr-only">Toggle Navigation</span>
 						<i class="fa fa-bars"></i>
