--- a/index.html
+++ b/index.html
@@ -83,23 +83,25 @@
 						<p class="lead">The Observer is the first wheel-chair specially created for driving anywhere you want, anytime you want, without limitations</p>
 						<a href="#" class="btn btn-rounded-4x btn-primary btn-hero">LEARN MORE</a>
 					</div>
-					<img src="assets/img/sliders/full-slide.jpg" alt="Slide Image">
+					<img src="assets/img/sliders/grass.jpg" alt="Slide Image">
 				</div>
 				<div>
+					<div class="overlay"></div>
 					<div class="container slide-content text-right">
 						<h2 class="hero-heading">The real adventure begins where the paved road ends</h2>
 						<p class="lead">Let us introduce you to our unique 4x4  all terrain wheel-chair</p>
 						<a href="#" class="btn btn-rounded-4x btn-primary btn-hero">LEARN MORE</a>
 					</div>
-					<img src="assets/img/sliders/full-slide2.jpg" alt="Slide Image">
+					<img src="assets/img/sliders/gus.jpg" alt="Slide Image">
 				</div>
 				<div>
+					<div class="overlay"></div>
 					<div class="container slide-content text-center">
 						<h2 class="hero-heading">EASY TO CUSTOMIZE</h2>
 						<p class="lead">Check out some of our custom accessories</p>
 						<a href="#" class="btn btn-rounded-4x btn-primary btn-hero">LEARN MORE</a>
 					</div>
-					<img src="assets/img/sliders/full-slide3.jpg" alt="Slide Image">
+					<img src="assets/img/sliders/sand.jpg" alt="Slide Image">
 				</div>
 			</div>
 			<div class="arrow-nav">
