video added to individual product page

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<div class="overlay"></div>
 					<div class="container slide-content text-right">
 						<h2 class="hero-heading">The real adventure begins where the paved road ends</h2>
-						<p class="lead">Let us introduce you to our unique 4x4  all terrain wheel-chair</p>
+						<p class="lead">Meet our unique 4x4  all terrain wheel-chair</p>
 						<a href="#" class="btn btn-rounded-4x btn-primary btn-hero">LEARN MORE</a>
 					</div>
 					<img src="assets/img/sliders/gus.jpg" alt="Slide Image">
