--- a/OB-EW-001.html
+++ b/OB-EW-001.html
@@ -71,7 +71,7 @@
 					</div>
 				</div>
 				<!-- END TOPBAR -->
-				<div class="navbar-header">
+				<div class="navbar-header" style="padding-bottom: 50px;"> 
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav">
 						<span class="sr-only">Toggle Navigation</span>
 						<i class="fa fa-bars"></i>
@@ -138,11 +138,11 @@
 							<p class="lead">Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products.</p>
 							<p>Dynamically syndicate open-source content through global potentialities. Proactively cultivate optimal potentialities after bricks-and-clicks technologies. Compellingly empower extensible benefits and holistic bandwidth. Professionally expedite client-based schemas before resource-leveling vortals. Professionally enable customer directed intellectual capital via highly efficient convergence. Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products. Compellingly harness viral ideas through wireless services. Holisticly utilize future-proof networks rather than granular communities. Proactively.</p>
 						</section>
+					</div>
+					<div class="col-md-4">
 						<div class="featured-video">
 							<iframe src="//player.vimeo.com/video/40056491"></iframe>
 						</div>
-					</div>
-					<div class="col-md-4">
 						<section>
 							<h2 class="section-heading">OB-EW-001 DETAILS</h2>
 							<ul class="list-unstyled project-detail-list">
