--- a/accessories.html
+++ b/accessories.html
@@ -81,13 +81,10 @@
 					</a>
 				</div>
 				<!-- MAIN NAVIGATION -->
-				<div id="main-nav" class="navbar-collapse collapse">
+				<div id="main-nav" class="navbar-collapse collapse" style="padding: 25px;">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
 							<a href="aboutus.html">ABOUT</a>
-						</li>
-						<li>
-							<a href="#services">SERVICES</a>
 						</li>
 						<li class="dropdown ">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">PRODUCTS  <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-down"></i></a>
@@ -99,10 +96,16 @@
 							</ul>
 						</li>
 						<li>
-							<a href="#pricing">PRICING</a>
+							<a href="news.html">NEWS</a>
 						</li>
-						<li>
-							<a href="contactUs.html">CONTACT US</a>
+						<li class="dropdown ">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">CONTACT US<i class="fa fa-angle-down"></i></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="4x4ElectricWheelchairs.html">Customer Support </a></li>
+								<li class="dropdown ">
+									<a href="accessories.html">Contact Us <span class="label label-danger label-main-nav">NEW</span></a>
+								</li>
+							</ul>
 						</li>
 					</ul>
 				</div>
