--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-	<title>Home | Repute - Responsive Multipurpose Bootstrap Theme</title>
+	<title>Home | Observer Mobility</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Responsive Multipurpose Bootstrap Theme">
-	<meta name="author" content="The Develovers">
+	<meta name="description" content="Observer Mobility Mobile Ready Site">
+	<meta name="author" content="www.EveryDayKenneth.com">
 	<!-- CSS -->
 	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -21,11 +21,11 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400italic,700,400,300' rel='stylesheet' type='text/css'>
 	<!-- FAVICONS -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/repute144x144.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
-	<link rel="shortcut icon" href="assets/ico/favicon.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/observer144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/observer114x114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/observer72x72.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/ico/observer57x57.png">
+	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
 </head>
 
 <body>
@@ -77,7 +77,7 @@
 						<i class="fa fa-bars"></i>
 					</button>
 					<a href="index.html" class="navbar-brand navbar-logo navbar-logo-bigger">
-						<img src="assets/img/logo/repute-logo-nav.png" alt="Repute - Responsive Multipurpose Bootstrap Theme">
+						<img src="assets/img/logo/observer-logo.png" alt="Observer Mobility logo">
 					</a>
 				</div>
 				<!-- MAIN NAVIGATION -->
@@ -86,9 +86,6 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li>
 							<a href="aboutus.html">ABOUT</a>
-						</li>
-						<li>
-							<a href="#services">SERVICES</a>
 						</li>
 						<li class="dropdown ">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">PRODUCTS  <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-down"></i></a>
@@ -100,10 +97,16 @@
 							</ul>
 						</li>
 						<li>
-							<a href="#pricing">PRICING</a>
+							<a href="news.html">NEWS</a>
 						</li>
-						<li>
-							<a href="contactUs.html">CONTACT US</a>
+						<li class="dropdown ">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">CONTACT US<i class="fa fa-angle-down"></i></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="customersupport.html">Customer Support </a></li>
+								<li class="dropdown ">
+									<a href="contactUs.html">Contact Us <span class="label label-danger label-main-nav">NEW</span></a>
+								</li>
+							</ul>
 						</li>
 					</ul>
 				</div>
@@ -119,24 +122,24 @@
 					<div class="item active">
 						<img src="assets/img/sliders/slider3-h500.png" class="img-responsive" alt="Slider Image">
 						<div class="carousel-caption">
-							<h2 class="hero-heading">CLEAN &amp; ELEGANT DESIGN</h2>
-							<p class="lead">Giving valuable reputation and credibility to your business</p>
+							<h2 class="hero-heading">Engineered to Impress</h2>
+							<p class="lead">The Observer 4x4 Electric Wheelchair is more than just a chair – it's a stunning design that you'd be proud to ride around outdoors. </p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
 					</div>
 					<div class="item">
 						<img src="assets/img/sliders/slider2-h500.png" class="img-responsive" alt="Slider Image">
 						<div class="carousel-caption">
-							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
-							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
+							<h2 class="hero-heading">Quality Components</h2>
+							<p class="lead">We used only the finest materials and components to build the Observer.</p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
 					</div>
 					<div class="item">
 						<img src="assets/img/sliders/slider3-h500.png" class="img-responsive" alt="Slider Image">
 						<div class="carousel-caption">
-							<h2 class="hero-heading">EASY TO CUSTOMIZE</h2>
-							<p class="lead">Readable code, well documented and FREE support</p>
+							<h2 class="hero-heading">Crafted with Love</h2>
+							<p class="lead">Our goal is not to sell wheelcharis – it's to craft them. Everyone who worked on the Observer 4x4 Electric Wheelchairs shares a passion for making the best product possible.</p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
 					</div>
@@ -149,7 +152,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<h2 class="section-heading">KNOW BETTER</h2>
+						<h2 class="section-heading">The Observer is exactly the chair you need, at precisely the moment when you need it.</h2>
 						<p class="lead">Synergistically procrastinate one-to-one results for accurate platforms. Assertively whiteboard corporate users whereas dynamic initiatives.</p>
 						<p>Energistically architect leading-edge users and inexpensive internal or "organic" sources. Distinctively evolve e-business resources after progressive intellectual capital. Objectively architect maintainable technologies via strategic convergence. Continually optimize stand-alone expertise with e-business e-services. Continually conceptualize client-centered opportunities and.</p>
 						<p>Dynamically customize backward-compatible processes via front-end models. Distinctively evisculate an expanded array of scenarios after virtual information. Professionally predominate technically sound resources through impactful mindshare. Efficiently drive viral interfaces without inexpensive value. Credibly.</p>
