products page added

--- a/4x4ElectricWheelchairs.html
+++ b/4x4ElectricWheelchairs.html
@@ -148,7 +148,7 @@
 								<a href="OB-EW-001.html" class="btn">read more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work1.png" alt="This is the description">
+								<img src="assets/img/portfolio/800x800/OB-EW-001.png" alt="This is the description">
 							</div>
 						</li>
 						<li class="portfolio-item ux">
@@ -159,7 +159,7 @@
 								<a href="OB-EW-002.html" class="btn">read more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work3.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/OB-EW-002.png" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography">
@@ -181,7 +181,7 @@
 								<a href="OB-EW-020.html" class="btn">read more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work5.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/OB-EW-020.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography ui">
@@ -192,7 +192,7 @@
 								<a href="OB-EW-030.html" class="btn">read more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work6.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/OB-EW-030.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography">
