--- a/index.html
+++ b/index.html
@@ -170,28 +170,28 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned left-boxed-icon">
-							<i class="fa fa-flag"></i>
+							<i class="fa fa-wheelchair"></i>
 							<h2 class="boxed-content-title">GOAL ORIENTED</h2>
 							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned left-boxed-icon">
-							<i class="fa fa-globe"></i>
+							<i class="fa fa-money"></i>
 							<h2 class="boxed-content-title">GLOBAL SERVICE</h2>
 							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned left-boxed-icon">
-							<i class="fa fa-cog"></i>
+							<i class="fa fa-hand-peace-o"></i>
 							<h2 class="boxed-content-title">DYNAMIC CHANGE</h2>
 							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="boxed-content left-aligned left-boxed-icon">
-							<i class="fa fa-users"></i>
+							<i class="fa fa-cc-paypal"></i>
 							<h2 class="boxed-content-title">PROFESSIONAL SUPPORT</h2>
 							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
 						</div>
@@ -206,8 +206,8 @@
 				<h2 class="section-heading sr-only">WHY REPUTE</h2>
 				<div class="tab-content">
 					<div class="tab-pane fade in active text-center" id="tab-bottom1">
-						<img src="assets/img/hero-unit-obj.png" class="img-responsive center-block margin-bottom-30px" alt="Ultra Responsive">
-						<h3 class="text-accent-color">ULTRA RESPONSIVE</h3>
+						<img src="assets/img/observer420x220.png" class="img-responsive center-block margin-bottom-30px" alt="Ultra Responsive">
+						<h3 class="text-accent-color">The Unlimited Wheelchair</h3>
 						<p class="lead">Phosfluorescently revolutionize viral leadership via turnkey technology. Synergistically monetize intermandated strategic theme areas through multimedia based.</p>
 					</div>
 					<div class="tab-pane fade text-center" id="tab-bottom2">
@@ -457,7 +457,7 @@
 					<h2 class="section-heading">GET IN TOUCH</h2>
 				</div>
 				<div class="pull-right">
-					<span>Call us at (1800) 765 - 4321 or</span>&nbsp;&nbsp;<a href="#" class="btn btn-lg btn-primary">CONTACT US</a>
+					<span>Call us at (1800) 777 - 7777 or</span>&nbsp;&nbsp;<a href="#" class="btn btn-lg btn-primary">CONTACT US</a>
 				</div>
 			</div>
 		</section>
@@ -469,13 +469,13 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/repute-logo-nav.png" class="logo" alt="Repute">
+						<img src="assets/img/logo/observer-logo.png" class="logo" alt="Repute">
 						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
 						<br>
 						<address class="margin-bottom-30px">
 							<ul class="list-unstyled">
 								<li>1234 North Main Street
-									<br/> New York, NY 222222</li>
+									<br/> New York, NY 22222</li>
 								<li>Phone: (1800) 765 - 4321</li>
 								<li>Email: email@yourdomain.com</li>
 							</ul>
@@ -526,7 +526,7 @@
 							<ul class="list-inline social-icons">
 								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" class="googleplus-bg"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="#" class="googleplus-bg"><i class="fa fa-linkedin"></i></a></li>
 								<li><a href="#" class="rss-bg"><i class="fa fa-rss"></i></a></li>
 							</ul>
 						</div>
@@ -536,7 +536,7 @@
 			</div>
 			<!-- COPYRIGHT -->
 			<div class="text-center copyright">
-				&copy;2016 The Develovers. All Rights Reserved.
+				&copy;2016 Observer Mobility. All Rights Reserved.
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
