--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		</nav>
 		<!-- END NAVBAR -->
 		<!-- HERO UNIT -->
-		<section class="hero-unit-slider slider-responsive">
+		<section class="hero-unit-slider slider-responsive" style="margin-top: 45px;">
 			<div id="carousel-hero" class="slick-carousel">
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
@@ -208,7 +208,7 @@
 					<div class="tab-pane fade in active text-center" id="tab-bottom1">
 						<img src="assets/img/observer420x220.png" class="img-responsive center-block margin-bottom-30px" alt="Ultra Responsive">
 						<h3 class="text-accent-color">The Unlimited Wheelchair</h3>
-						<p class="lead">Phosfluorescently revolutionize viral leadership via turnkey technology. Synergistically monetize intermandated strategic theme areas through multimedia based.</p>
+						<p class="lead">Dear Observer Mobility team, do we want to keep these tabs on this homepage? If so, what pictures should we put here? What message do we want to communicate here?</p>
 					</div>
 					<div class="tab-pane fade text-center" id="tab-bottom2">
 						<img src="assets/img/hero-unit-obj3.png" class="img-responsive center-block margin-bottom-30px" alt="Easy to Customize">
@@ -228,10 +228,10 @@
 				</div>
 				<div class="custom-tabs-line tabs-line-top">
 					<ul class="nav" role="tablist">
-						<li class="active"><a href="#tab-bottom1" role="tab" data-toggle="tab">Responsive</a></li>
-						<li><a href="#tab-bottom2" role="tab" data-toggle="tab">Easy to Customize</a></li>
-						<li><a href="#tab-bottom3" role="tab" data-toggle="tab">Design</a></li>
-						<li><a href="#tab-bottom4" role="tab" data-toggle="tab">Free Updates &amp; Support</a></li>
+						<li class="active"><a href="#tab-bottom1" role="tab" data-toggle="tab">Unlimited</a></li>
+						<li><a href="#tab-bottom2" role="tab" data-toggle="tab">Quality</a></li>
+						<li><a href="#tab-bottom3" role="tab" data-toggle="tab">Crafted With Love</a></li>
+						<li><a href="#tab-bottom4" role="tab" data-toggle="tab">Engineered to Impress</a></li>
 					</ul>
 				</div>
 			</div>
@@ -240,8 +240,8 @@
 		<!-- RECENT WORKS -->
 		<section class="recent-works">
 			<div class="container">
-				<h2 class="section-heading pull-left">RECENT WORKS</h2>
-				<a href="#" class="btn btn-primary pull-right">See all works</a>
+				<h2 class="section-heading pull-left">FEATURED PRODUCTS</h2>
+				<a href="#" class="btn btn-primary pull-right">See all products</a>
 				<div class="clearfix"></div>
 				<div class="portfolio-static">
 					<div class="row">
@@ -249,12 +249,12 @@
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">Raining</h4>
-									<p class="brief-description">Photography</p>
+									<h4 class="title">OB-EW-001</h4>
+									<p class="brief-description">The Best One</p>
 									<a href="#" class="btn">read more</a>
 								</div>
 								<div class="media-wrapper">
-									<img src="assets/img/portfolio/800x500/work5.png" alt="Item Thumbnail" />
+									<img src="assets/img/portfolio/800x500/001-green.jpg" alt="Item Thumbnail" />
 								</div>
 							</div>
 						</div>
@@ -262,12 +262,12 @@
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">Perfect Edge</h4>
-									<p class="brief-description">Product Design</p>
+									<h4 class="title">OB-EW-002</h4>
+									<p class="brief-description">The Silver Medalist</p>
 									<a href="#" class="btn">read more</a>
 								</div>
 								<div class="media-wrapper">
-									<img src="assets/img/portfolio/800x500/work6.png" alt="Item Thumbnail" />
+									<img src="assets/img/portfolio/800x500/002-blue.jpg" alt="Item Thumbnail" />
 								</div>
 							</div>
 						</div>
@@ -275,12 +275,12 @@
 							<div class="portfolio-item">
 								<div class="overlay"></div>
 								<div class="info">
-									<h4 class="title">Sunny Day</h4>
-									<p class="brief-description">Photography</p>
+									<h4 class="title">OB-EW-003</h4>
+									<p class="brief-description">Third Place Love</p>
 									<a href="#" class="btn">read more</a>
 								</div>
 								<div class="media-wrapper">
-									<img src="assets/img/portfolio/800x500/work7.png" alt="Item Thumbnail" />
+									<img src="assets/img/portfolio/800x500/003-blue.jpg" alt="Item Thumbnail" />
 								</div>
 							</div>
 						</div>
