--- a/accessories.html
+++ b/accessories.html
@@ -77,7 +77,7 @@
 						<i class="fa fa-bars"></i>
 					</button>
 					<a href="index.html" class="navbar-brand navbar-logo navbar-logo-bigger">
-						<img src="assets/img/logo/repute-logo-nav.png" alt="Repute - Responsive Multipurpose Bootstrap Theme">
+						<img src="assets/img/logo/observer-logo.png" alt="Repute - Responsive Multipurpose Bootstrap Theme">
 					</a>
 				</div>
 				<!-- MAIN NAVIGATION -->
@@ -116,11 +116,11 @@
 		<!-- BREADCRUMBS -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">PORTFOLIO</h1>
+				<h1 class="page-title pull-left">ACCESSORIES</h1>
 				<ol class="breadcrumb">
 					<li><a href="#">Home</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li class="active">Portfolio 4 Columns</li>
+					<li><a href="#">Products</a></li>
+					<li class="active">Accesories</li>
 				</ol>
 			</div>
 		</div>
@@ -254,7 +254,7 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/repute-logo-light.png" class="logo" alt="Repute">
+						<img src="assets/img/logo/observer-logo.png" class="logo" alt="Repute">
 						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
 						<br>
 						<address class="margin-bottom-30px">
