slider images changed

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div id="carousel-hero" class="slick-carousel">
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<img src="assets/img/sliders/slider3-h500.png" class="img-responsive" alt="Slider Image">
+						<img src="assets/img/sliders/slider1.jpg" class="img-responsive" alt="1920X500 BACKGROUND IMAGE">
 						<div class="carousel-caption">
 							<h2 class="hero-heading">Engineered to Impress</h2>
 							<p class="lead">The Observer 4x4 Electric Wheelchair is more than just a chair – it's a stunning design that you'd be proud to ride around outdoors. </p>
@@ -128,7 +128,7 @@
 						</div>
 					</div>
 					<div class="item">
-						<img src="assets/img/sliders/slider2-h500.png" class="img-responsive" alt="Slider Image">
+						<img src="assets/img/sliders/slider2.jpg" class="img-responsive" alt="1920X500 BACKGROUND IMAGE">
 						<div class="carousel-caption">
 							<h2 class="hero-heading">Quality Components</h2>
 							<p class="lead">We used only the finest materials and components to build the Observer.</p>
@@ -136,10 +136,10 @@
 						</div>
 					</div>
 					<div class="item">
-						<img src="assets/img/sliders/slider3-h500.png" class="img-responsive" alt="Slider Image">
+						<img src="assets/img/sliders/slider3.jpg" class="img-responsive" alt="1920X500 BACKGROUND IMAGE">
 						<div class="carousel-caption">
 							<h2 class="hero-heading">Crafted with Love</h2>
-							<p class="lead">Our goal is not to sell wheelcharis – it's to craft them. Everyone who worked on the Observer 4x4 Electric Wheelchairs shares a passion for making the best product possible.</p>
+							<p class="lead">Our goal is not to sell wheelchairs – it's to craft them. Everyone who worked on the Observer 4x4 Electric Wheelchairs shares a passion for making the best product possible.</p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
 					</div>
@@ -527,7 +527,7 @@
 								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
 								<li><a href="#" class="googleplus-bg"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" class="rss-bg"><i class="fa fa-rss"></i></a></li>
+								<li><a href="#" class="rss-bg"><i class="fa fa-wechat"></i></a></li>
 							</ul>
 						</div>
 						<!-- END COLUMN 3 -->
