--- a/index.html
+++ b/index.html
@@ -211,18 +211,18 @@
 						<p class="lead">Dear Observer Mobility team, do we want to keep these tabs on this homepage? If so, what pictures should we put here? What message do we want to communicate here?</p>
 					</div>
 					<div class="tab-pane fade text-center" id="tab-bottom2">
-						<img src="assets/img/hero-unit-obj3.png" class="img-responsive center-block margin-bottom-30px" alt="Easy to Customize">
-						<h3 class="text-accent-color">IT'S EASY TO CUSTOMIZE</h3>
+						<img src="assets/img/observer420x220.png" class="img-responsive center-block margin-bottom-30px" alt="Easy to Customize">
+						<h3 class="text-accent-color">Quality</h3>
 						<p class="lead">Efficiently incentivize leading-edge alignments with go forward expertise. Conveniently myocardinate leveraged process improvements through progressive models.</p>
 					</div>
 					<div class="tab-pane fade text-center" id="tab-bottom3">
-						<img src="assets/img/hero-unit-obj.png" class="img-responsive center-block margin-bottom-30px" alt="Clean and Elegant Design">
-						<h3 class="text-accent-color">CLEAN &amp; ELEGANT DESIGN</h3>
+						<img src="assets/img/observer420x220.png" class="img-responsive center-block margin-bottom-30px" alt="Clean and Elegant Design">
+						<h3 class="text-accent-color">Crafted With Love</h3>
 						<p class="lead">Competently implement bricks-and-clicks collaboration and idea-sharing rather than visionary internal or "organic" sources. Rapidiously matrix premium core competencies for.</p>
 					</div>
 					<div class="tab-pane fade text-center" id="tab-bottom4">
-						<img src="assets/img/free.png" class="img-responsive center-block margin-bottom-30px" alt="Free Updates and Support">
-						<h3 class="text-accent-color">GET UPDATES &amp; SUPPORT FOR FREE</h3>
+						<img src="assets/img/observer420x220.png" class="img-responsive center-block margin-bottom-30px" alt="Free Updates and Support">
+						<h3 class="text-accent-color">Engineered to Impress</h3>
 						<p class="lead">Dramatically supply adaptive imperatives and stand-alone content. Exceptional solutions after web-enabled potentialities. Synergistically negotiate alternative best practices whereas professional "outside the box" thinking.</p>
 					</div>
 				</div>
@@ -325,7 +325,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-6 col-sm-6">
+<!-- 							<div class="col-md-6 col-sm-6">
 								<div class="news-item margin-bottom-30px clearfix">
 									<a href="#"><img src="assets/img/news/news3.png" class="img-responsive pull-left" alt="News Thumbnail"></a>
 									<div class="right">
@@ -333,8 +333,8 @@
 										<p>Proactively engage orthogonal growth strategies without resource-leveling testing procedures.</p>
 									</div>
 								</div>
-							</div>
-							<div class="col-md-6 col-sm-6">
+							</div> -->
+<!-- 							<div class="col-md-6 col-sm-6">
 								<div class="news-item margin-bottom-30px clearfix">
 									<a href="#"><img src="assets/img/news/news4.png" class="img-responsive pull-left" alt="News Thumbnail"></a>
 									<div class="right">
@@ -351,7 +351,7 @@
 										<p>Proactively engage orthogonal growth strategies without resource-leveling testing procedures.</p>
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<div class="col-md-6 col-sm-6">
 								<div class="see-all-news">
 									<a href="#">See all news <i class="fa fa-long-arrow-right"></i></a>
@@ -369,26 +369,26 @@
 				<div class="row">
 					<div class="col-sm-3 col-xs-6">
 						<div class="number-info horizontal text-white-color">
-							<i class="fa fa-plug pull-left"></i>
-							<p>5200 <span>SUBSCRIBERS</span></p>
+							<i class="fa fa-music pull-left"></i>
+							<p>5200 <span>Happy Customer Customer</span></p>
 						</div>
 					</div>
 					<div class="col-sm-3 col-xs-6">
 						<div class="number-info horizontal text-white-color">
-							<i class="fa fa-cubes pull-left"></i>
-							<p>273 <span>PROJECTS</span></p>
+							<i class="fa fa-wheelchair pull-left"></i>
+							<p>27 <span>Countries Sold</span></p>
 						</div>
 					</div>
 					<div class="col-sm-3 col-xs-6">
 						<div class="number-info horizontal text-white-color">
 							<i class="fa fa-thumbs-up pull-left"></i>
-							<p>640K <span>APPRECIATIONS</span></p>
+							<p>10 <span>Solid Years of Business</span></p>
 						</div>
 					</div>
 					<div class="col-sm-3 col-xs-6">
 						<div class="number-info horizontal text-white-color">
-							<i class="fa fa-users pull-left"></i>
-							<p>132 <span>CLIENTS</span></p>
+							<i class="fa fa-wrench pull-left"></i>
+							<p>132 <span>Hospitals Currently Using the Observer</span></p>
 						</div>
 					</div>
 				</div>
@@ -401,24 +401,24 @@
 				<div class="testimonial slick-carousel">
 					<div class="testimonial-container">
 						<div class="testimonial-body">
-							<p>Credibly extend parallel relationships after clicks-and-mortar content. Credibly pontificate team building alignments rather than diverse quality vectors.</p>
+							<p>Incredibly necessary.</p>
 							<div class="testimonial-author">
 								<img src="assets/img/user2.png" alt="Author" class="pull-left">
-								<span><span class="author-name">Antonius</span> <em>CEO of TheCompany</em></span>
+								<span><span class="author-name">Shantanu Narayen</span> <em>CEO of Adobe</em></span>
 							</div>
 						</div>
 						<div class="testimonial-body">
-							<p>Credibly pontificate team building alignments rather than diverse quality vectors. Monotonectally benchmark business communities for distinctive mindshare.</p>
+							<p>The future of transportation is the Observer.</p>
 							<div class="testimonial-author">
 								<img src="assets/img/user1.png" alt="Author" class="pull-left">
-								<span><span class="author-name">Michael</span> <em>General Manager of DreamCorp</em></span>
+								<span><span class="author-name">Sundar Pichai</span> <em>CEO of Google</em></span>
 							</div>
 						</div>
 						<div class="testimonial-body">
-							<p>Appropriately morph low-risk high-yield process improvements through progressive partnerships. Uniquely brand enabled. Globally network timely imperatives without plug-and-play schemas.</p>
+							<p>The future of Gaming rests in the hands of the Observer.</p>
 							<div class="testimonial-author">
 								<img src="assets/img/user5.png" alt="Author" class="pull-left">
-								<span><span class="author-name">Palmer</span> <em>Freelance Web Developer</em></span>
+								<span><span class="author-name">Satya Nadella</span> <em>CEO of Microsoft</em></span>
 							</div>
 						</div>
 					</div>
@@ -427,7 +427,7 @@
 		</section>
 		<!-- END TESTIMONIAL -->
 		<!-- OUR CLIENTS -->
-		<section class="clients">
+<!-- 		<section class="clients">
 			<div class="container">
 				<h2 class="section-heading">OUR CLIENTS</h2>
 				<ul class="list-inline list-client-logo">
@@ -448,7 +448,7 @@
 					</li>
 				</ul>
 			</div>
-		</section>
+		</section> -->
 		<!-- END OUR CLIENTS -->
 		<!-- CALL-TO-ACTION -->
 		<section class="call-to-action">
